--- a/index.html
+++ b/index.html
@@ -68,12 +68,17 @@
         </div>
         <div class="col-12 col-sm-12 col-lg-6 sub-txt d-flex justify-content-center align-items-center order-1 bx-3">
           <h3>
-            I'm baby waistcoat DIY ugh, viral hella tofu hashtag ramps taiyaki heirloom asymmetrical sriracha. Before they 
-            sold out vaporware street art, tilde tumeric portland banjo. Williamsburg raclette unicorn sriracha vaporware enamel 
-            pin farm-to-table locavore, af four loko live-edge small batch trust fund helvetica schlitz. Kinfolk synth small batch chia. 
-            You probably haven't heard of them biodiesel brunch iPhone keytar YOLO coloring book art party glossier mlkshk chicharrones cliche. 
-            Flexitarian mlkshk kickstarter 3 wolf moon actually VHS single-origin coffee craft beer gastropub mixtape dreamcatcher. 
-            Tbh vaporware meh retro salvia air plant +1 selfies listicle cornhole gentrify ugh master cleanse.
+            I am a technology enthusiast, especially interested in web development, robotics, and IoT applications.<br>
+            I find a special pleasure in learning and researching emerging technologies and how to help develop applications that make people's lives easier.<br>
+            I'm a life-long learner who aspires to master his skills. <br>
+            
+            I've developed and implemented prototypes focused on industrial automation and IoT using open-source technologies such as Raspberry Pi, Arduino, etc.<br>
+            Then I transitioned into a new discipline, web development.<br>
+            I made websites, take courses, and then,
+            I joined into Microverse where I've been working side by side with web developers around the world, developing real-life projects.<br>
+
+            My current stack includes Ruby on Rails, React, Redux, ES6, Node.js, PostgreSQL, MySQL, Git, GithubFlow, DS, and Algorithms.<br>
+            I’m looking for opportunities to bring that passion to a full-time role as a developer.<br>
           </h3>
         </div>
       </div>
@@ -97,13 +102,7 @@
           </div>
           <div class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center">
             <h4>Moto Rocket Mx</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A social web app with the main functionalities like posts, follow users also have a feed with the last posts made by their followed users, built with Rails, Rspec & Sass.</p>
             <div class="pjct-skills d-flex flex-row justify-content-center align-items-center">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
@@ -261,13 +260,7 @@
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
             <h4>Newsweek Clone</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A full responsive webpage based on "Newsweek website", mostly built using bootstrap framework.</p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
@@ -396,13 +389,7 @@
           </div>
           <div class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center">
             <h4>The Next Web Clone</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A full responsive webpage clone based on the webpage "The Next Web"</p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
@@ -523,13 +510,8 @@
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
             <h4>Members Only</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A simple application where users can make posts, as well as comment on them,
+              Users can see the authors of the posts only if they are registered in the application.</p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
@@ -695,13 +677,7 @@
           </div>
           <div class="col-12 col-lg-6 pjct-content brdr-bckg-l-txt-r d-flex flex-column justify-content-center align-items-center">
             <h4>New York Times Clone</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A full responsive webpage clone based on the webpage "New York Times"</p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
@@ -822,13 +798,7 @@
         <div class="pjct-box radius-l d-flex flex-row">
           <div class="col-12 col-lg-6 pjct-content brdr-txt-l-bckg-r d-flex flex-column justify-content-center align-items-center">
             <h4>Apple 2014 Clone</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-              Nisi, suscipit! Soluta facilis consequuntur maxime nisi aperiam 
-              officia quia similique optio?
-            </p>
+            <p>A simple webpage clone based on the webpage "Apple 2014"</p>
             <div class="pjct-skills d-flex flex-row">
               <div class="d-flex flex-column">
                 <div class="d-flex flex-row justify-content-center align-items-center">
